# plotnet

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/plotter/: controller.py
backend/tests/plotter/: test_plotter.py
frontend/: package.json
frontend/src/components/: PlotterStatus.tsx
