[project]
name = "plotnet-backend"
version = "0.1.0"
description = "Web based pen plotter driver"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.9.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120
